Replaced call to externalRegistries instead of DataVault into getVirtualKeys api